force-app/main/default/objects/FX_Rates__c/FX_Rates__c.object-meta.xml
<CustomObject>
    <label>FX Rate</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>FX Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FX Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>