force-app/main/default/objects/FX_Rates__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>