force-app/main/default/objects/FX_Rates__c/fields/from_currency__c.field-meta.xml
<CustomField>
    <fullName>from_currency__c</fullName>
    <label>from Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>XXX</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>