force-app/main/default/objects/FX_Rates__c/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <label>rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>