force-app/main/default/objects/FX_Rates__c/fields/reverse_rate__c.field-meta.xml
<CustomField>
    <fullName>reverse_rate__c</fullName>
    <formula>1/ rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>reverse rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>