force-app/main/default/objects/FX_Rates__c/fields/to_currency__c.field-meta.xml
<CustomField>
    <fullName>to_currency__c</fullName>
    <label>to_currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>