force-app/main/default/objects/FX_Rates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>date__c</columns>
    <columns>NAME</columns>
    <columns>from_currency__c</columns>
    <columns>to_currency__c</columns>
    <columns>rate__c</columns>
    <columns>reverse_rate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>